[package]
name = "nerve"
version = "0.1.0"
description = "Nerve payments program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nerve"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor" }
anchor-spl = { git = "https://github.com/jet-lab/anchor" }
thiserror = "1.0"
solana-program = "1.7"
pyth-client = "0.2"
